[package]
name = "tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"]}
colored = { version = "2.0.0" }

[dev-dependencies]
pretty_assertions = "1"
