[package]
authors = ["mfroeh <mfroeh0@pm.me>"]
name = "mtree"
version = "0.1.0"
edition = "2021"
description = "A tree command with icons and colors"

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
colored = { version = "2.0.0" }
phf = { version = "0.11", features = ["macros"] }


[dev-dependencies]
pretty_assertions = "1"
